// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetLabeling should render properly with an asset selected 1`] = `
Array [
  .emotion-0 {
  padding: 8px;
  padding-left: 16px;
  border-bottom: 1px solid #3b3b3b;
  color: #e0e0e0;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  font-weight: 700;
}

.emotion-2 {
  color: #6088FE;
}

.emotion-3 {
  height: 8px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-4 label {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  color: #b3b3b3;
}

.emotion-6 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-7 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-8 {
  padding-bottom: 8px;
}

.emotion-9 {
  position: relative;
  height: 100%;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #808080;
  background-color: transparent;
  margin-bottom: 4px;
  margin-right: -12px;
}

.emotion-10:hover,
.emotion-10.focus-visible:focus,
.emotion-10 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-10:hover svg,
.emotion-10.focus-visible:focus svg,
.emotion-10 .noop svg {
  opacity: 1;
}

.emotion-10[aria-disabled=true],
.emotion-10 .noop {
  color: #808080;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div>
        Select a dataset
      </div>
      <div>
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/datasets/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          + New Data Set
        </a>
      </div>
    </div>
    <div
      className="emotion-3"
    />
    <div
      className="emotion-4"
    >
      <label
        className="emotion-5"
      >
        Dataset:
        <div
          className="emotion-6"
        >
          <select
            className="emotion-7"
            defaultValue=""
            disabled={false}
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select an option...
            </option>
            <option
              value="111d0534-7736-135f-8a62-d29da837913f"
            >
              faces
            </option>
            <option
              value="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
            >
              cats
            </option>
            <option
              value="1c237c5c-8b64-11eb-882c-a6e78dab3824"
            >
              pets
            </option>
            <option
              value="4b0b10a9-cec1-155c-b12f-ee2bc8787e06"
            >
              mystery
            </option>
          </select>
        </div>
      </label>
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <button
            aria-disabled={true}
            aria-label="Toggle Actions Menu"
            className="emotion-10"
            onBlur={[Function]}
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="kebab.svg"
              height={20}
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Select a dataset to start labeling assets.
  </div>,
]
`;

exports[`AssetLabeling should render properly with an asset selected 2`] = `
Array [
  .emotion-0 {
  padding: 8px;
  padding-left: 16px;
  border-bottom: 1px solid #3b3b3b;
  color: #e0e0e0;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  font-weight: 700;
}

.emotion-2 {
  color: #6088FE;
}

.emotion-3 {
  height: 8px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-4 label {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  color: #b3b3b3;
}

.emotion-6 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-7 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-8 {
  padding-bottom: 8px;
}

.emotion-9 {
  position: relative;
  height: 100%;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  margin-bottom: 4px;
  margin-right: -12px;
}

.emotion-10:hover,
.emotion-10.focus-visible:focus,
.emotion-10 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-10:hover svg,
.emotion-10.focus-visible:focus svg,
.emotion-10 .noop svg {
  opacity: 1;
}

.emotion-10[aria-disabled=true],
.emotion-10 .noop {
  color: #808080;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div>
        Select a dataset
      </div>
      <div>
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/datasets/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          + New Data Set
        </a>
      </div>
    </div>
    <div
      className="emotion-3"
    />
    <div
      className="emotion-4"
    >
      <label
        className="emotion-5"
      >
        Dataset:
        <div
          className="emotion-6"
        >
          <select
            className="emotion-7"
            defaultValue="111d0534-7736-135f-8a62-d29da837913f"
            disabled={false}
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select an option...
            </option>
            <option
              value="111d0534-7736-135f-8a62-d29da837913f"
            >
              faces
            </option>
            <option
              value="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
            >
              cats
            </option>
            <option
              value="1c237c5c-8b64-11eb-882c-a6e78dab3824"
            >
              pets
            </option>
            <option
              value="4b0b10a9-cec1-155c-b12f-ee2bc8787e06"
            >
              mystery
            </option>
          </select>
        </div>
      </label>
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <button
            aria-label="Toggle Actions Menu"
            className="emotion-10"
            onBlur={[Function]}
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="kebab.svg"
              height={20}
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  <AssetLabelingForm
    assetId="vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C"
    dispatch={[Function]}
    hasFaceDetection={false}
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    state={
      Object {
        "datasetId": "111d0534-7736-135f-8a62-d29da837913f",
        "datasetType": "FaceRecognition",
        "errors": Object {},
        "isLoading": false,
        "labels": Object {},
        "lastLabel": "",
        "lastScope": "TRAIN",
      }
    }
  />,
]
`;

exports[`AssetLabeling should render properly with bulk labeling selected 1`] = `
<BulkAssetLabeling
  projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  setIsBulkLabeling={[Function]}
/>
`;

exports[`AssetLabeling should render properly with bulk labeling selected 2`] = `
<BulkAssetLabeling
  projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  query="W3sidHlwZSI6ImxpbWl0IiwiYXR0cmlidXRlIjoidXRpbGl0eS5TZWFyY2ggUmVzdWx0cyBMaW1pdCIsInZhbHVlcyI6eyJtYXhBc3NldHMiOjEwMDAwfX1d"
  setIsBulkLabeling={[Function]}
/>
`;

exports[`AssetLabeling should render properly with no asset selected 1`] = `
.emotion-0 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

.emotion-1 {
  height: 16px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited,
.emotion-2 .noop {
  background-color: #3A5DFF;
}

.emotion-2:hover,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-2[aria-disabled=true],
.emotion-2 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  Select an asset to the left to label a single asset or click the button below to label all assets in the current search.
  <div
    className="emotion-1"
  />
  <button
    className="emotion-2"
    onClick={[Function]}
    type="button"
  >
    Label All Assets in Search
  </button>
</div>
`;
